# zkvm-compiler-optimizations

./: .gitignore  Cargo.toml  README.md  bench.sh  build.sh  config.json  euler.sh  flags.json  load_euler_modules.sh  pyproject.toml  run.py  run.sh  zkbench.sh
configs/tune/: all-passes.json  top10-abs-prove-time.json  top10.json  top15-abs-cycle-count.json
docs/: llvm.md
docs/llvm/: subtractive-flags.patch
programs/bigmem/: Cargo.toml  README.md
programs/c/: .gitignore  Cargo.toml  Makefile  build.rs
programs/c-build/: Cargo.toml  Makefile
programs/c-build/src/: lib.rs
programs/c-platform/: Cargo.toml
programs/c-platform/include/: zkvm.h
programs/c-platform/src/: lib.rs
programs/c-risc0/: Cargo.toml
programs/c-risc0/src/: lib.rs  main.rs
programs/c-sample/: Makefile
programs/c-sample/guest/: main.c
programs/c-sample/host/: Cargo.toml  build.rs
programs/c-sp1/: Cargo.toml  build.rs
programs/c-sp1/c_src/: hi.c  hi.h
programs/c-tools/: Makefile  build_tools.rs
programs/c/guest/: main.c  (+1 more)
programs/ecdsa-verify-risc0/: Cargo.toml  README.md
programs/ecdsa-verify-sp1/: Cargo.toml
programs/ecdsa-verify-x86/: Cargo.toml
programs/ecdsa-verify-x86/src/: lib.rs
programs/eddsa-verify-risc0/: Cargo.toml
programs/eddsa-verify-sp1/: Cargo.toml  README.md
programs/eddsa-verify-x86/: Cargo.toml
programs/example/: Cargo.toml
programs/factorial/: Cargo.toml
programs/fibonacci/: REAMDE.md
programs/keccak256-risc0/: README.md
programs/l2norm/: Cargo.toml
programs/loop-sum/: Cargo.toml
programs/merkle/: Cargo.toml
programs/merkle/src/: lib.rs  main.rs
programs/npb-bt/: Cargo.toml  README.md
programs/npb-cg/: Cargo.toml  README.md  build.rs
programs/npb-common/: Cargo.toml
programs/npb-ep/: Cargo.toml  README.md
programs/npb-ep/src/: lib.rs  main.rs
programs/npb-ft/: Cargo.toml
programs/npb-is/: Cargo.toml  README.md
programs/npb-lu/: Cargo.toml  README.md
programs/npb-mg/: Cargo.toml
programs/npb-sp/: Cargo.toml
programs/polybench-adi/: Cargo.toml
programs/polybench-atax/: Cargo.toml
programs/polybench-bicg/: Cargo.toml
programs/polybench-cholesky/: Cargo.toml
programs/polybench-correlation/: Cargo.toml
programs/polybench-covariance/: Cargo.toml
programs/polybench-deriche/: Cargo.toml
programs/polybench-doitgen/: Cargo.toml
programs/polybench-durbin/: Cargo.toml
programs/polybench-fdtd-2d/: Cargo.toml
programs/polybench-mvt/: Cargo.toml
programs/polybench-nussinov/: Cargo.toml
programs/polybench-seidel-2d/: Cargo.toml
programs/polybench-symm/: Cargo.toml
programs/polybench-syr2k/: Cargo.toml
programs/polybench-syrk/: Cargo.toml
programs/polybench-trisolv/: Cargo.toml
programs/polybench-trmm/: Cargo.toml
programs/regex-match/: Cargo.toml
programs/rsp-sp1/: Cargo.toml
programs/rsp-sp1/src/: main.rs
programs/rust-tests/: Cargo.toml
programs/sha2-bench/: Cargo.toml  README.md
programs/sha256/: Cargo.toml  README.md
programs/sha256/src/: lib.rs  main.rs
programs/sha3-bench/: REAMDE.md
programs/sha3-chain/: README.md
programs/simplifycfg/: Cargo.toml
programs/simplifycfg/src/: lib.rs  main.rs
programs/spec-605/: Makefile
programs/spec-605/host/: Cargo.toml  build.rs
programs/spec-605/host/src/: inp_small.in  lib.rs  main.rs
programs/spec-619/host/: Cargo.toml
programs/spec-619/host/src/: lib.rs
programs/spec-631/: Makefile
results/: .gitignore
results/docs/: README.md
results/llvm/: .gitignore  fibonacci-after.asm  fibonacci-before.asm
runner/: Cargo.toml
runner/benches/: bench_main.rs
runner/src/: fitness.rs  input.rs  main.rs  report_risc0.rs  report_sp1.rs  risc0.rs  sp1.rs  tune.rs  types.rs  utils.rs
scripts/: build.sh  build_cuda.sh  eval.py
scripts/euler/: run.sh  run_no_gpu.sh  run_with_config.py
sp1-cuda/: Cargo.toml
zkbench/: __main__.py  asm.py  bench.py  build.py  clean.py  common.py  config.py  run.py
zkbench/plot/: average_by_profile.py  average_duration.py  average_improvement.py  average_improvement_compare.py  average_improvement_difference.py  average_improvement_zkvm.py  average_khz.py  common.py  cycle_count.py  cycle_count_abs.py  cycle_count_by_program.py  cycle_count_by_program_zkvm.py  cycle_count_duration.py  cycle_count_single_program.py  cycle_prove_duration.py  duration.py  duration_single_program.py  export.py  improvement_by_program.py  improvement_by_program_exec.py  improvement_by_program_zkvm.py  improvement_number_overview.py  improvement_profile.py  improvement_profiles_overview.py  improvement_programs.py  improvement_programs_overview.py  improvement_single_program.py  no_effect.py  opt_by_program.py  opt_no_effect.py  plot.py  prove_exec.py  total_time_by_profile.py
zkbench/tune/: common.py  exhaustive.py  ffd.py  genetic.py  runner.py  tune.py
(+8366 files in other folders)
