[workspace]
[package]
name = "ecdsa-verify-x86"
version = "0.1.0"
edition = "2021"

[lib]
name = "ecdsaverifyx86"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
k256 = { version = "0.13.4", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default-features = false }

[features]
risc0 = []
sp1 = []
x86 = []
