[workspace]
[package]
name = "merkle"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "merkle"
path = "src/main.rs"

[lib]
name = "merkle"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sp1-zkvm = { version = "=4.1.1", optional = true }
risc0-zkvm = { version = "1.2.3", default-features = false, features = ["std"], optional = true }
rs_merkle = "1.5.0"

[features]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-zkvm"]
x86 = []
