[workspace]
[package]
name = "npb-ep"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "npb-ep"
path = "src/main.rs"

[lib]
name = "npbep"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sp1-zkvm = { version = "=4.1.1", optional = true }
risc0-zkvm = { version = "1.2.3", default-features = false, features = ["std"], optional = true }
npb-common = { path = "../npb-common" }

[features]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-zkvm"]
x86 = []

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(class,values("S","W","A","B","C","D","E","F","Z"))','cfg(safe,values("true"))','cfg(timers,values("true"))']}
