[workspace]
[package]
name = "rsp-sp1"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "4.1.6"
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "4081e40833aebece5958518724a327ede100f6cd" }
bincode = "1.3.3"

[features]
risc0 = []
sp1 = []

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.8-sp1-4.0.0", package = "sha2" }
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0", package = "substrate-bn" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-4.1.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-4.1.0" }
